--- a/src/main/webapp/static/modules/codepad/css/codepad.css
+++ b/src/main/webapp/static/modules/codepad/css/codepad.css
@@ -32,7 +32,7 @@ body {
 	margin-top: 35px;
 }
 
-#region_north,#region_north .l-btn {
+#region_north, #region_north .l-btn {
 	background-color: #548ac1;
 	color: #fff;
 }
@@ -49,11 +49,10 @@ body {
 	background: -o-linear-gradient(top, #548ac1 0, aliceblue 100%);
 	background: linear-gradient(to bottom, #548ac1 0, aliceblue 100%);
 	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#548ac1,
-		endColorstr=aliceblue, GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#548ac1, endColorstr=aliceblue, GradientType=0);
 }
 
-.region-header,.region-header .panel-title {
+.region-header, .region-header .panel-title {
 	color: #fff;
 	font-weight: normal;
 }
@@ -66,18 +65,27 @@ body {
 	color: #ccc;
 }
 
-.article-table td {
+.article-item {
+	background-color: aliceblue;
+	border-radius: 4px;
+	border: 0;
+	padding: 2px;
+}
+
+#article_item .item {
+	padding-bottom: 20px;
 	border-width: 0 0 1px 0;
+	border-style: dotted;
 	border-color: #ccc;
 }
 
-#home_page .datagrid .panel-body-noheader{
-	border: 0;
+#article_pagination {
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
 }
 
-#home_page .pagination {
-	position: fixed;
-	bottom: 1px;
+.icon-png {
+	padding-right: 20px;
 }
 
 a {
@@ -95,7 +103,7 @@ div.content-tab-header {
 }
 
 div.content-tab-content {
-	padding: 10px;
+	padding: 0 10px;
 	overflow-wrap: break-word;
 }
 
