--- a/src/main/webapp/static/easyui/themes/icon.css
+++ b/src/main/webapp/static/easyui/themes/icon.css
@@ -112,3 +112,6 @@
 .icon-m-copy{
 	background:url('icons/m_copy.png') no-repeat center center;
 }
+.icon-m-user-message{
+	background:url('icons/m_user_message.png') no-repeat center center;
+}
